[package]
name = "lab5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.1", features = ["derive"] }
cgmath = "0.18.0"
glfw = "0.54.0"
glow = "0.13.1"
rand = "0.8.5"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "graph"
path = "src/bin/graph.rs"
